--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <a class="footer-link" href="https://www.instagram.com/ig_manasmehta/">Instagram</a> 
     <a class="footer-link" href="https://www.linkedin.com/in/manas-mehta-432466251/">Linkedin</a>
     <p class="namelast">© Manas Mehta</p>
+    <a class="footer-link" href="">Github</a>
+      
   </div>
   
 </body>
