--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.instagram.com/ig_manasmehta/">Instagram</a> 
     <a class="footer-link" href="https://www.linkedin.com/in/manas-mehta-432466251/">Linkedin</a>
-    <p class="namelast">© Manas Mehta</p>
-    <a class="footer-link" href="">Github</a>
-      
+   
+    <a class="footer-link" href="https://github.com/Manaskmehta">Github</a>
+       <p class="namelast">© Manas Mehta</p>
   </div>
   
 </body>
