--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
   </div> 
   <br>
   <br>
-    
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.instagram.com/ig_manasmehta/">Instagram</a> 
-    <a class="footer-link" href="https://www.linkedin.com/in/manas-mehta-432466251/">Linkedin</a>
-   <a class="footer-link" href="https://github.com/Manaskmehta">Github</a>
-       <p class="namelast">© Manas Mehta</p>
+ <div class="bottom-container">
+    <a class="footer-link" href="https://www.instagram.com/ig_manasmehta/"><img src="instagram.png" width="50px" height="50px"></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/manas-mehta-432466251/"><img src="linkedin1.jpeg" width="50px" height="50px"></a> 
+    <p class="namelast">© Manas Mehta</p>
   </div>
   
 </body>
