this is the tip calculator

--- a/index.html
+++ b/index.html
@@ -1,60 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="mystyless1.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manas Mehta</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&family=Sacramento&display=swap" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="mystyle.css">
+<script type="text/javascript" src="a.js"></script>
 </head>
 <body>
-    <div class="top-container">
-       <!-- For the upper cloud --><div class="top-cloud"><img src="cloud.png"></div>  
-       <h1>  I'm Manas</h1>
-       <h2>a<span class="pro"> <u>pro</u></span>grammer</h2>
-       <!-- For the upper cloud --><div class="bottom-cloud"><img src="cloud.png"></div>
-       <div> <img src="mountain.png"></div>
-    </div>
-    <div class="middle-container">
-        <img src="manas.jpeg" height="250px" width="250px">
-        <div class="intro"><h2> Hello.</h2>
-        <p> I am a student at GLS UNIVERSITY.
-             My education focuses on the web development and data science,
-             with an emphasis on the websites and other tools.</p>
-            <h4> . . . .</h4>
-    </div>
-    <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="hacker" src="https://cdn-icons-png.flaticon.com/512/6071/6071111.png" alt="skull">
-          <h3>Penetrating and Breaking Firewalls</h3>
-          <p> I am currently working on blockchain development through a course at my college</p>
-        </div>
-    <div class="skill-row">
-        <img class="webdev" src="https://cdn-icons-png.flaticon.com/512/7991/7991055.png" alt="pclogo">
-        <h3>Web Development</h3>
-        <p>“A designer knows he has achieved perfection not when there is nothing left to add, but when there is nothing left to take away.”
+    <div class="main">
+        <h1 align="center">
+           Tip Calculator
+        </h1>
+        <p>
+            Enter your Bill Amount :-
         </p>
-      </div>
-      <h4> . . . .</h4>
+        <input type="text" id="amount">
 
-    </div>
+        <p> How was our Service </p>
+        
+        <select id="services" >
+            <option value="0.30">30% - Outstanding</option>
+            <option value="0.20">20% -  Good</option>
+            <option value="0.15">15% - ok</option>
+            <option value="0.10">10% - Bad</option>
+            <option value="0.05">5% -  Terrible</option>
+        </select>
+        <p>Total number of persons</p>
+            <input type="text" id="persons"><br><br><br>
+            <button id="calculate">Calculate</button>
+   <div class="tip" > <p>TIP AMOUNT :-</p>
+    <span id="total">0</span>₹
+            </div>
+        </div>
+
+
+
     
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>Let's have a talk</h3>
-      <p>Our door is always open for a good cup of coffee</p>
-      <a class="btn" href="mailto:manasmehta0100@gmail.com">CONTACT ME</a>
-    </div>
-  </div> 
-  <br>
-  <br>
- <div class="bottom-container">
-    <a class="footer-link" href="https://www.instagram.com/ig_manasmehta/"><img src="instagram.png" width="50px" height="50px"></a>
-    <a class="footer-link" href="https://www.linkedin.com/in/manas-mehta-432466251/"><img src="linkedin1.jpeg" width="50px" height="50px"></a> 
-    <p class="namelast">© Manas Mehta</p>
-  </div>
-  
 </body>
-</html> 
+</html>
+
+
+
+
+
