--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/mystyless1.css">
+    <link rel="stylesheet" href="mystyless1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manas Mehta</title>
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="top-container">
-       <!-- For the upper cloud --><div class="top-cloud"><img src="images/cloud.png"></div>  
+       <!-- For the upper cloud --><div class="top-cloud"><img src="cloud.png"></div>  
        <h1>  I'm Manas</h1>
        <h2>a<span class="pro"> <u>pro</u></span>grammer</h2>
-       <!-- For the upper cloud --><div class="bottom-cloud"><img src="images/cloud.png"></div>
-       <div> <img src="images/mountain.png"></div>
+       <!-- For the upper cloud --><div class="bottom-cloud"><img src="cloud.png"></div>
+       <div> <img src="mountain.png"></div>
     </div>
     <div class="middle-container">
         <img src="images/manas.jpeg" height="250px" width="250px">
