--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div> <img src="mountain.png"></div>
     </div>
     <div class="middle-container">
-        <img src="images/manas.jpeg" height="250px" width="250px">
+        <img src="manas.jpeg" height="250px" width="250px">
         <div class="intro"><h2> Hello.</h2>
         <p> I am a student at GLS UNIVERSITY.
              My education focuses on the web development and data science,
